--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,14 +1,16 @@
 {
-  "name": "FlairGen",
-  "short_name": "FlairGen",
-  "background_color": "#3E82F7",
-  "orientation": "portrait",
-  "theme_color": "#1e88e5",
-  "display": "standalone",
-  "start_url": "/",
-  "icons": [{
-    "src": "/assets/favicon.png",
-    "type": "image/png",
-    "sizes": "256x256"
-  }]
+	"name": "type in flair",
+	"short_name": "type in flair",
+	"background_color": "#3E82F7",
+	"orientation": "portrait",
+	"theme_color": "#1e88e5",
+	"display": "standalone",
+	"start_url": "/",
+	"icons": [
+		{
+			"src": "/assets/favicon.png",
+			"type": "image/png",
+			"sizes": "256x256"
+		}
+	]
 }
